--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ../lib)
 #set(CMAKE_RUNTIME_OUTPUT_DIRECTORY  ../tests/bin)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY  ../bin)
 project(OBAnalizer)
-add_library(OBAnalizer SHARED src/OBAnalizer.cpp src/OBAnalizer.h)
+add_library(OBAnalizer STATIC src/OBAnalizer.cpp src/OBAnalizer.h)
 set_target_properties(OBAnalizer PROPERTIES PREFIX "")
 #add_executable(ex01 tests/source.cpp)
 #target_link_libraries(ex01 PUBLIC OBAnalizer)
